bugfix: set public details: owner address word wrap

--- a/src/app/_shared/components/transaction-message-details/details-components/set-public-details/set-public-details.component.scss
+++ b/src/app/_shared/components/transaction-message-details/details-components/set-public-details/set-public-details.component.scss
@@ -4,8 +4,12 @@
   display: block;
 }
 
-.set-public-details__owner {
+.set-public-details__owner-label {
   color: $color-grey;
+}
+
+.set-public-details__owner-value {
+  word-wrap: break-word;
 }
 
 .set-public-details__bio {
